devops/k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api-deployment
  labels:
    app: sample-api
    env: dev
    targetApp: api
spec:
  selector:
    matchLabels:
      app: sample-api-container
  template:
    metadata:
      labels:
        app: sample-api-container
    spec:
      containers:
        - name: sample-api-container
          image: samle-api:1.0.2
          imagePullPolicy: Never
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "4096Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
