devops/k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
  labels:
    app: sample-api
    env: dev
    targetApp: api
spec:
  selector:
    app: sample-api-container
  ports:
    - name: api-listner
      protocol: TCP
      port: 8889
      targetPort: 80
  type: NodePort
