devops/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-redis-service
  labels:
    app: sample
    env: dev
    targetApp: redis
spec:
  selector:
    app: sample-redis-container
  ports:
    - name: redis-listner
      protocol: TCP
      port: 6380
      targetPort: 6379
  type: NodePort
